DMS/k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dms-prod
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
